RESOLVED FIXED48282
WebGraphicsContext3DDefaultImpl does not run on top of OpenGL ES 2.0 implementations
https://bugs.webkit.org/show_bug.cgi?id=48282
Summary WebGraphicsContext3DDefaultImpl does not run on top of OpenGL ES 2.0 implemen...
Kenneth Russell
Reported 2010-10-25 17:39:47 PDT
When --in-process-webgl is used in Chromium in conjunction with ANGLE, an assertion failure is triggered because GL_DEPTH_COMPONENT is an invalid enum to pass to glRenderbufferStorage. We need to pass GL_DEPTH_COMPONENT16 when running on top of an OpenGL ES 2.0 implementation. We need to check the GL implementation in use (app/gfx/gl_implementation.h, GetGLImplementation() and determine which enum to send down based on whether EGLGLES2 is in use.
Attachments
Patch (10.03 KB, patch)
2010-11-09 17:40 PST, Kenneth Russell
jamesr: review+
kbr: commit-queue-
Kenneth Russell
Comment 1 2010-10-25 17:51:31 PDT
There are additional problems when running on top of ANGLE (or any non-desktop GL implementation). The shader validator needs to be changed to generate GLSL ES rather than GLSL. There may be additional problems. Changing the synopsis.
Zhenyao Mo
Comment 2 2010-10-27 10:21:49 PDT
In the initialization, code like glEnable(GL_VERTEX_PROGRAM_POINT_SIZE); glEnable(GL_POINT_SPRITE); should only be executed if the backend is desktop GL.
Kenneth Russell
Comment 3 2010-11-09 17:40:46 PST
James Robinson
Comment 4 2010-11-09 17:47:49 PST
Comment on attachment 73446 [details] Patch R=me one suggestion: consider making the isGLES2 flag a member and check that instead of having checks for gfx::GetGLImplementation() everywhere.
Kenneth Russell
Comment 5 2010-11-09 18:02:59 PST
(In reply to comment #4) > one suggestion: consider making the isGLES2 flag a member and check that instead of having checks for gfx::GetGLImplementation() everywhere. Thanks, that's a good suggestion. I'll do that in the landed patch.
Kenneth Russell
Comment 6 2010-11-09 18:26:37 PST
WebKit Review Bot
Comment 7 2010-11-09 19:09:58 PST
http://trac.webkit.org/changeset/71705 might have broken GTK Linux 64-bit Debug
Zhenyao Mo
Comment 8 2010-11-12 13:35:23 PST
Note You need to log in before you can comment on or make changes to this bug.