WebKit/chromium/src/WebGraphicsContext3DDefaultImpl.h
@@ -271,6 +271,7 @@ private:
     WebGraphicsContext3D::Attributes m_attributes;
     bool m_initialized;
     bool m_renderDirectlyToWebView;
+    bool m_isGLES2;
 
     unsigned int m_texture;
     unsigned int m_fbo;
